Agregando paginas estaticas

--- a/app/views/paginas_estaticas/politica_de_privacidad.html.erb
+++ b/app/views/paginas_estaticas/politica_de_privacidad.html.erb
@@ -1,2 +1,2 @@
-<h1>PaginasEstaticas#politica_de_privacidad</h1>
-<p>Find me in app/views/paginas_estaticas/politica_de_privacidad.html.erb</p>
+﻿<% provide(:titulo, 'Política de privacidad') %>
+<h1>Política de privacidad</h1>
