--- a/app/views/paginas_estaticas/preguntas_frecuentes.html.erb
+++ b/app/views/paginas_estaticas/preguntas_frecuentes.html.erb
@@ -1,2 +1,2 @@
-<h1>PaginasEstaticas#preguntas_frecuentes</h1>
-<p>Find me in app/views/paginas_estaticas/preguntas_frecuentes.html.erb</p>
+﻿<% provide(:titulo, 'Preguntas frecuentes') %>
+<h1>Preguntas frecuentes</h1>
