--- a/app/views/paginas_estaticas/acerca_de.html.erb
+++ b/app/views/paginas_estaticas/acerca_de.html.erb
@@ -1,2 +1,2 @@
-<h1>PaginasEstaticas#acerca_de</h1>
-<p>Find me in app/views/paginas_estaticas/acerca_de.html.erb</p>
+﻿<% provide(:titulo, 'Acerca de nosotros') %>
+<h1>Acerca de nosotros</h1>
